--- a/index.html
+++ b/index.html
@@ -23,24 +23,24 @@
 
     <br>
 
-    <a href="https://forms.gle/XdyKSf4rPxSjeonw7">
+    <a href="https://forms.gle/dExJ2ieU69wYPia38">
         <button class="btn" value="Quiz Master">Quiz Master</button>
     </a>
 
     <br><br>
 
-    <a href="https://forms.gle/cA1uaChHnN93TDvn7">
-        <button class="btn" value="Paper Presentation">Blind 'C'</button>
+    <a href="https://forms.gle/ji1tPtxn1uyxVDDR6">
+        <button class="btn" value="Blind 'C'">Blind 'C'</button>
     </a>
     <br><br>
 
-    <a href="https://forms.gle/cA1uaChHnN93TDvn7">
-        <button class="btn" value="Paper Presentation">Web Development</button>
+    <a href="https://forms.gle/9FA5CypuMuQ8f17M8">
+        <button class="btn" value="Web Development">Web Development</button>
     </a>
     <br><br>
 
-    <a href="https://forms.gle/cA1uaChHnN93TDvn7">
-        <button class="btn" value="Paper Presentation">Poster Presentation</button>
+    <a href="https://forms.gle/mfa3pUFVYeXjCwDa8">
+        <button class="btn" value="Poster Presentation">Poster Presentation</button>
     </a>
     <br><br>
 
@@ -48,7 +48,7 @@
 
     <br>
     <div>
-        <img src="images/Technova23.jpg" alt="challenge24">
+        <img src="images/SOFTCLONES_challenge_2k24.jpg" alt="challenge24">
     </div>
     <br>
 
